Only styling left

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WebApp_Database": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\EC\\asp.net\\Silicon_WebApp\\Infrastructure\\Data\\webapp-database.mdf;Integrated Security=True;Connect Timeout=30"
+  },
+  "ApiUris": {
+    "Categories": "https://localhost:7061/api/category",
+    "Courses": "https://localhost:7061/api/course"
   }
 }
